# boilerplate

./: README.md
backend/: .env.example  .gitignore  .rustfmt.toml  Cargo.toml  README.md  clippy.toml  deny.toml  docker-compose.yml  justfile  requests.http  test_tracing.sh
backend/.cargo/: config.toml
backend/.config/: nextest.toml
backend/.githooks/: pre-commit
backend/docs/: AUTH_GUIDE.md  CHEATSHEET.md  DEV_GUIDE.md  MIGRATION_GUIDE.md  RECIPES.md  SECRETS_MANAGEMENT.md
backend/migrations/: .gitkeep
backend/migrations/2025-10-13-123224-0000_create_users/: down.sql  up.sql
backend/src/: dev.rs  dev_macros.rs  docs.rs  error.rs  lib.rs  main.rs  metrics.rs  routes.rs  tracing_config.rs
backend/src/config/: mod.rs  secrets.rs
backend/src/db/: mod.rs  pagination.rs  query_log.rs  schema.rs  seed.rs  transaction.rs
backend/src/handlers/: auth.rs  dev.rs  health.rs  mod.rs
backend/src/jobs/: mod.rs  tasks.rs
backend/src/middleware/: auth.rs  logging.rs  mod.rs  rate_limit.rs  request_id.rs  security.rs
backend/src/models/: dto.rs  mapper.rs  mod.rs  user.rs
backend/src/repositories/: user_repository.rs
backend/src/services/: auth.rs  jwt.rs  mod.rs
backend/src/types/: email.rs  mod.rs  user_id.rs
backend/tests/: auth_integration_test.rs  health_test.rs  repository_test.rs  snapshot_test.rs
backend/tests/common/: builder.rs  macros.rs  mod.rs  test_db.rs  test_helpers.rs
backend/tests/fixtures/: mod.rs
backend/tests/snapshots/: snapshot_test__api_snapshots__auth_response_format.snap.new  snapshot_test__api_snapshots__health_check_response_format.snap.new  snapshot_test__error_response_format.snap.new  snapshot_test__multiple_users_snapshot.snap.new  snapshot_test__user_response_snapshot.snap.new
docs/: TYPE_GENERATION.md
frontend/: .env  .env.example  .gitignore  .prettierignore  .prettierrc  README.md  eslint.config.js  knip.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/docs/: AUTH.md  EFFECTOR.md  FSD.md  SETUP_COMPLETE.md
frontend/src/: index.css  main.tsx
frontend/src/app/: index.tsx
frontend/src/app/model/: index.ts  init.ts
frontend/src/app/providers/: error-boundary.tsx  router-provider.tsx
frontend/src/app/ui/: app-router.tsx
frontend/src/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  badge.tsx  breadcrumb.tsx  button-group.tsx  button.tsx  calendar.tsx  carousel.tsx  chart.tsx  checkbox.tsx  command.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  empty.tsx  field.tsx  form.tsx  hover-card.tsx  input-group.tsx  input-otp.tsx  item.tsx  label.tsx  menubar.tsx  navigation-menu.tsx  pagination.tsx  popover.tsx  radio-group.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  slider.tsx  switch.tsx  toggle-group.tsx  toggle.tsx  tooltip.tsx
frontend/src/entities/user/: index.ts
frontend/src/features/auth/: index.ts
frontend/src/pages/: index.ts  index.tsx
frontend/src/pages/demo/: index.ts
frontend/src/pages/home/: index.ts  index.tsx
frontend/src/pages/login/: index.ts
frontend/src/pages/not-found/: index.ts
frontend/src/pages/register/: index.ts
frontend/src/shared/: index.ts
frontend/src/shared/api/: auth.ts  client.ts  index.ts
frontend/src/shared/config/: index.ts
frontend/src/shared/lib/: auth-events.ts  format.ts  index.ts  router-guards.ts  router.ts  storage.ts  validation.ts
frontend/src/shared/types/: auth.ts  index.ts
frontend/src/shared/ui/: index.ts
frontend/src/widgets/app-layout/: index.tsx
frontend/src/widgets/slide-menu/: index.tsx
(+34 files in other folders)
