[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
rust-version = "1.80"

[lib]
name = "backend"
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"

[[bin]]
name = "openapi"
path = "src/bin/openapi.rs"

[[bin]]
name = "hash_password"
path = "src/bin/hash_password.rs"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors", "compression-gzip", "timeout"] }

# API Documentation
utoipa = { version = "4.2", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

# Database (fully async)
diesel = { version = "2.1", features = ["postgres", "chrono", "uuid"] }
diesel-async = { version = "0.4", features = ["postgres", "deadpool"] }
diesel_migrations = "2.1"
deadpool = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time/Date
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["serde", "v4"] }

# Configuration
config = { version = "0.14", features = ["toml"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Logging and Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-opentelemetry = "0.23"
opentelemetry = { version = "0.22", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio", "trace"] }
opentelemetry-stdout = { version = "0.3", features = ["trace"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Security
argon2 = "0.5"
password-hash = { version = "0.5", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
jsonwebtoken = "9.2"

# HTTP Client (for external APIs)
reqwest = { version = "0.11", features = ["json"] }

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Background jobs
tokio-cron-scheduler = "0.10"

# Rate limiting
tower_governor = "0.4"

# Observability
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

[dev-dependencies]
# Testing
mockall = "0.12"
rstest = "0.18"
fake = { version = "2.9", features = ["derive", "chrono", "uuid"] }
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["postgres"] }
insta = { version = "1.34", features = ["json", "yaml", "redactions"] }

# HTTP testing
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
hyper = "1.0"

[profile.dev]
opt-level = 1          # Faster runtime without much compile time cost
debug = 1              # Faster linking with line numbers (not full debug info)
incremental = true     # Enable incremental compilation
codegen-units = 256    # More parallel compilation (faster builds, slightly slower runtime)
split-debuginfo = "unpacked"  # Faster debug builds on macOS/Linux

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.test]
opt-level = 1

[features]
default = []
aws-secrets = ["aws-config", "aws-sdk-secretsmanager"]
vault-secrets = ["vaultrs"]

# Optional dependencies for secret management
[dependencies.aws-config]
version = "1.0"
optional = true

[dependencies.aws-sdk-secretsmanager]
version = "1.0"
optional = true

[dependencies.vaultrs]
version = "0.7"
optional = true
